tests/neg/i9886.scala
trait D(l: => Any):  // error
  def f = l
